<resources>
    <string name="app_name">Maestro</string>
    <string name="main_title">Maestro Courses</string>
    <string name="main_login">Login</string>
    <string name="choose_action">Choose how you want to connect</string>
    <string name="sign_in">Sign in</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_out">Sign out</string>
    <string name="register_title">Register your account</string>
    <string name="login_or_register">Login or Register</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your full name</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter a username</string>
    <string name="email">Email address</string>
    <string name="enter_email">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_again">Enter your password again</string>
    <string name="already_have">Already have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="submit">Submit</string>
    <string name="select_pic">Select a profile picture</string>
    <string name="forgot">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_note">By clicking RESET, you will receive an email to reset you password</string>
    <string name="check_email">Please check your email to reset the password</string>
    <string name="save_pic">Save Picture</string>
    <string name="hello">hello</string>
    <string name="hello_coma">hello,</string>
    <string name="chat">Chat</string>
    <string name="edit_pic">Edit image</string>
    <string name="register_to_course">Register to the course</string>
    <string name="notif">notifications</string>
    <string name="make_sure_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contacts">Contacts</string>
    <string name="add_pic">Add Picture</string>
    <string name="type">Type a message</string>
    <string name="chats">Chats</string>
    <string name="wait">Please Wait</string>
    <string name="wrong">The username or password is incorrect</string>
    <string name="fields">Please fill all fields</string>
    <string name="success">Sign up successful, please wait</string>
    <string name="pass_valid">Make sure the password is correct</string>
    <string name="permissions">Can\'t work without permissions go to setting to grant access.</string>
    <string name="country">Country</string>
    <string name="country_hint">Enter country name</string>
    <string name="gps">Use GPS</string>
</resources>