<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/choose_action"
        android:layout_margin="10dp"
        android:textColor="#EC5151"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonshape"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:id="@+id/signin_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:id="@+id/signup_btn"/>
</LinearLayout>